# MP2I

./: .gitignore
SI/: main.typ
TIPE/: README.md  build.sh  echec.c  index.html  notes.md  notes.odt  test  test.c  texte présentation orale tipe en groupe.docx
TIPE/lib/: fisr  fisr.c  fisr.py  lib_calcul.c  lib_calcul.h  lib_expression.c  lib_expression.h  lib_type.h
TIPE/notes/: notes.md  notes_debut.md
TIPE/ocaml/: entree.txt  parser  parser.ml
TIPE/tests/: main  main.c  test.c
anglais/: commentary.md  cours.md  list.md  list_diff copy.md  list_diff.md  liste.txt  main.py  revise.py
francais/: bibliographie.md  cours.md  devoirs.md  exercices.md  fiche_methode.md  programme.md
info/AOC/: j1-2.py  j1.py  j10.py  j11.py  j13.py  j2.py  j3.py  j4.py  j5.py  j8.py  j9.py
info/C/: bigint.c  bigint.h  dynArray.c  dynArray.h  primes  primes.c  sudoku  sudoku.c  sudoku_extreme.txt  sudoku_extreme_25.txt  test  test.c  test.py  test_bigint  test_bigint.c
info/MP2I/: sujets
info/MP2I/DM/03-tresGrandsNombres/: Makefile  dune  exec  nombres  nombres.cmo  nombres.ml  nombres.mli  suites.cmo  suites.ml  suites.mli
info/OS/: test.c  test.ld
info/france-ioi/: 04-lissage  05-grenouilles  05-grenouilles.c  boitesFact.c  exercice.c  objectifs.md
info/lib_array/: array.c  array.h
info/ocaml/: test  test.ml
info/potentiel/: main.tex
info/prologin/: cadeaux  (+12 more)
maths/: DM17.tex  demos.tex  exo.tex  exo_7nov.tex  exos_14_novembre.tex  exos_2_décembre.tex  exos_9_janvier.tex  lib.tex
physique/: EC2.tex  M1.tex  M3.tex  cinematique.tex  demo.tex  lib.tex
(+378 files in other folders)
